# ohtotptoken

./: .gitmodules  LICENSE  README.md  build-profile.json5  oh-package-lock.json5  oh-package.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: build-profile.json5  obfuscation-rules.txt  oh-package-lock.json5  oh-package.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  base32.cpp  base32.h  main.cpp  sha1.cpp  sha1.h  totp.cpp  totp.h  totp_mcu.cpp
entry/src/main/cpp/proto/: google_auth.pb.c  google_auth.pb.h  google_auth.proto
entry/src/main/cpp/types/libentry/: index.d.ts  oh-package.json5
entry/src/main/cpp/types/libotpcutils/: index.d.ts  oh-package.json5
entry/src/main/ets/components/: ItemDescription.ets  SettingItem.ets  SubItemButton.ets  SubItemToggle.ets  TokenIcon.ets  TokenItem.ets  TopNavigationView.ets
entry/src/main/ets/dialogs/: DropFilesDialog.ets  EncryptionPassWordDialog.ets  FortiConfigDialog.ets  HOTPConfigDialog.ets  NumberInputDialog.ets  OTPConfigDialog.ets  QRCodeDialog.ets  SteamConfigDialog.ets  TOTPConfigDialog.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/pages/: AgreementPage.ets  Index.ets  PrivacyPage.ets  ScanQRCode.ets  SettingPage.ets  ShowCodePage.ets  ShowDataSyncDetailsPage.ets  SplashPage.ets
entry/src/main/ets/utils/: AppPreference.ets  CommonConstants.ets  CryptoUtils.ets  CustomAppData.ets  CustomDialog.ets  FileUtils.ets  FortiConfigDialog.ets  GoogleAuthUtils.ets  HOTPConfigDialog.ets  KvManager.ets  Logger.ets  (+13 more)
(+9 files in other folders)
